--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "diff": "^8.0.2",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "js-yaml": "^4.1.1",
